--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,50 +1,37 @@
-.profilecard{
-    display: flex;
-    flex-direction: column !important;
-    align-items: center;
-    justify-content: center;
-    width: 30%;
-    margin:5% 0 5% 35%;
-    height: 30rem;
-    background-color: #f5f5f5;
-    box-shadow: 0 0 8px 0 rgba(51, 51, 51, 0.452);
-    border-radius: 1rem;
-    animation: fade-in 1s;
+.container{
+    animation: fade-in 1s ;
 }
 
-.profile-card__avatar{
-    margin: 0 !important;
-}
-
-.profilecard__footer{
+.social-list{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
     width: 90%;
-    height: 15vh;
+    height: 5vh;
+    list-style-type: none;
+    margin-left: 2%;
 }
 
-.profilecard__icon{
+.social-list__icon{
     font-size: 1.5em;  
     color: #000;
-    align-self: flex-end;
     animation: fade-in 1s;
 }
 
-.profilecard__icon.gh{
+.social-list__icon.gh{
     animation-delay: 1s;
 }
 
-.profilecard__icon.li{
+.social-list__icon.li{
     animation-delay: 1.1s;
 }
 
-.profilecard__icon.ig{
+.social-list__icon.ig{
     animation-delay: 1.2s;
 }
 
-.profilecard__icon.tt{
+.social-list__icon.tt{
     animation-delay: 1.3s;
 }
 
